--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -186,16 +186,16 @@ header.masthead {
     header.masthead .intro-text .skills {
       font-size: 1.75em; } }
 
-#portfolio .portfolio-item {
+#services .services-item {
   right: 0;
   margin: 0 0 15px; }
-  #portfolio .portfolio-item .portfolio-link {
+  #services .services-item .services-link {
     position: relative;
     display: block;
     max-width: 400px;
     margin: 0 auto;
     cursor: pointer; }
-    #portfolio .portfolio-item .portfolio-link .caption {
+    #services .services-item .services-link .caption {
       position: absolute;
       width: 100%;
       height: 100%;
@@ -204,9 +204,9 @@ header.masthead {
       transition: all ease 0.5s;
       opacity: 0;
       background: rgba(24, 188, 156, 0.9); }
-      #portfolio .portfolio-item .portfolio-link .caption:hover {
+      #services .services-item .services-link .caption:hover {
         opacity: 1; }
-      #portfolio .portfolio-item .portfolio-link .caption .caption-content {
+      #services .services-item .services-link .caption .caption-content {
         font-size: 20px;
         position: absolute;
         top: 50%;
@@ -215,20 +215,20 @@ header.masthead {
         margin-top: -12px;
         text-align: center;
         color: white; }
-        #portfolio .portfolio-item .portfolio-link .caption .caption-content i {
+        #services .services-item .services-link .caption .caption-content i {
           margin-top: -12px; }
-        #portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
-        #portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
+        #services .services-item .services-link .caption .caption-content h3,
+        #services .services-item .services-link .caption .caption-content h4 {
           margin: 0; }
 
-#portfolio * {
+#services * {
   z-index: 2; }
 
 @media (min-width: 767px) {
-  #portfolio .portfolio-item {
+  #services .services-item {
     margin: 0 0 30px; } }
 
-.portfolio-modal .modal-dialog {
+.services-modal .modal-dialog {
   max-width: 100%;
   min-height: 100%;
   margin: 0;
@@ -239,19 +239,19 @@ header.masthead {
   background-clip: border-box;
   -webkit-box-shadow: none;
   box-shadow: none; }
-  .portfolio-modal .modal-dialog .modal-content {
+  .services-modal .modal-dialog .modal-content {
     padding: 100px 0;
     border: 0;
     border-radius: 0; }
-    .portfolio-modal .modal-dialog .modal-content h2 {
+    .services-modal .modal-dialog .modal-content h2 {
       font-size: 3em;
       margin: 0; }
-    .portfolio-modal .modal-dialog .modal-content img {
+    .services-modal .modal-dialog .modal-content img {
       margin-bottom: 30px; }
-    .portfolio-modal .modal-dialog .modal-content .item-details {
+    .services-modal .modal-dialog .modal-content .item-details {
       margin: 30px 0; }
 
-.portfolio-modal .close-modal {
+.services-modal .close-modal {
   position: absolute;
   top: 25px;
   right: 25px;
@@ -259,9 +259,9 @@ header.masthead {
   height: 75px;
   cursor: pointer;
   background-color: transparent; }
-  .portfolio-modal .close-modal:hover {
+  .services-modal .close-modal:hover {
     opacity: 0.3; }
-  .portfolio-modal .close-modal .lr {
+  .services-modal .close-modal .lr {
     /* Safari and Chrome */
     z-index: 1051;
     width: 1px;
@@ -272,7 +272,7 @@ header.masthead {
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
     background-color: #2C3E50; }
-    .portfolio-modal .close-modal .lr .rl {
+    .services-modal .close-modal .lr .rl {
       /* Safari and Chrome */
       z-index: 1052;
       width: 1px;
@@ -283,7 +283,7 @@ header.masthead {
       transform: rotate(90deg);
       background-color: #2C3E50; }
 
-.portfolio-modal .modal-backdrop {
+.services-modal .modal-backdrop {
   display: none;
   opacity: 0; }
 
